--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "scripts": {
     "start": "node ./game/index.js",
     "web": "node ./game/index.js",
-    "dev": "nodemon ./game/index.js"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
     "express": "^4.17.1",
     "random": "^3.0.6",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack-dev-server": "^4.6.0"
   },
   "engines": {
     "node": "16.x"
