--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "random": "^3.0.6",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
